Зроблено адаптацію і маркер

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
       <div class="output">
         <div class="outputItem">
           <p>IP Address:</p>
-          <span id="ipAddress"></span>
+          <span class="idInformaton" id="ipAddress"></span>
         </div>
         <div class="outputItem">
           <p>Location:</p>
-          <span translate="no"></span>
+          <span class="idInformaton" translate="no"></span>
         </div>
         <div class="outputItem">
           <p>Timezone:</p>
-          <span translate="no" id="timezone"></span>
+          <span class="idInformaton" translate="no" id="timezone"></span>
         </div>
         <div class="outputItem">
           <p>ISP:</p>
-          <span translate="no" id="isp"></span>
+          <span class="idInformaton" translate="no" id="isp"></span>
         </div>
       </div>
       <div id="mapa" class="map"></div>
